# rhods-model-registry-poc

./: .gitignore  Readme.md  okteto.yaml  pom.xml
.github/: register_model.py  train_model_and_store.py
.github/workflows/: example.yml
example-ui/: cors-proxy.sh  index.html  main.css
jupyter-notebook/: Makefile  Untitled.ipynb  example.joblib
minio/: Dockerfile  fly.toml
model-serving/: .gitignore  inference-service.yaml  install.sh  minio-secret-template.yaml  notes.md  test.sh
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/model_registry_python_sdk/: client.py
python-sdk/tests/: basic_test.py  my_example_content.txt
registry-external-ref/: .dockerignore  Dockerfile  Makefile  Readme.md  fly.toml  pom.xml
registry-external-ref/src/main/java/io/apicurio/registry/rules/: ExternalReferenceBuilder.java
registry-external-ref/src/main/java/io/apicurio/registry/rules/compatibility/: ExtRefCompatibilityChecker.java
registry-external-ref/src/main/java/io/apicurio/registry/rules/validity/: ExtRefContentValidator.java
registry-external-ref/src/main/resources/: overlay.properties
sync-operator/: Makefile  PROJECT  pom.xml
sync-operator/src/main/java/io/apicurio/model/version/sync/: Controller.java
sync-operator/src/main/resources/: application.properties
sync-operator/src/main/resources/crds/: crd.yaml  model_version.yaml  serving.kserve.io_inferenceservices.yaml
sync-operator/src/main/resources/deployment/: kubernetes.yml
sync-operator/src/main/resources/examples/: simple_fixed.yaml  simple_latest.yaml
web-terminal/: start.sh
(+3 files in other folders)
